<resources>
    <string name="app_name">MaterialFitness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_weight_units">Use Metric Units</string>
    <string name="action_settings">Settings</string>
    <!-- global strings -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="are_you_sure">Are you sure?</string>
    <!-- Text values for the muscle group enum -->
    <string name="muscle_group">Muscle group</string>
    <string name="shoulders">Shoulders</string>
    <string name="chest">Chest</string>
    <string name="legs">Legs</string>
    <string name="arms">Arms</string>
    <string name="back">Back</string>
    <string name="core">Core</string>
    <!-- Starting screen dialog -->
    <string name="choose_muscle_group">Choose the muscle group for your new exercise</string>
    <string name="create_new_exercise">Create new exercise</string>
    <string name="add_workout">Add Workout</string>
    <string name="log_exercise">Log an exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="add_sets_later">You\'ll be able to add sets right after this!</string>
    <string name="error_empty_exercise">Please add a title for your exercise!</string>
    <string name="error_empty_muscle_group">Please select a muscle group!</string>

    <!-- Log workout fragment strings -->
    <string name="todays_workout">Today\'s workout</string>
    <string name="empty_workout">Empty workout</string>
    <string name="log_a_workout">Log a workout</string>
    <string name="reps_at_weight">%1$d reps at %2$d lbs</string>
    <!-- Drawer strings. -->
    <string name="log_workout">Log workout</string>
    <string name="workout_history">History</string>

    <!-- Workout details screen -->
    <string name="add_set">Add Set</string>
    <string name="edit_set">Edit Set</string>
    <string name="num_reps_hint">Num. Reps</string>
    <string name="weight_hint">Weight</string>
    <string name="weight_set_label">Weight: </string>
    <string name="reps_set_label">Reps: </string>
    <string name="weight_units">%1$.1f %2$s</string>
    <string name="delete_exercise_session">Delete exercise</string>
    <string name="delete_exercise_session_sure">Are you sure you want to delete this exercise? All associated sets will be deleted too!</string>

    <!-- Weight Units -->
    <string name="lbs">lbs</string>
    <string name="kgs">kgs</string>

    <!-- workout history screen -->
    <string name="calendar_menu_item_tooltip">Select a date</string>
    <string name="workout_history_title">Workout History</string>
    <string name="workouts_will_appear">Historical Workouts Will Appear Here</string>
    <string name="placeholder_shared_element_name">placeholder.sharedelement</string>

    <!-- workout details popup -->
    <string name="date_exercise_title">%1$s %2$s</string>

    <!-- schedule -->
    <string name="schedule">Schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="schedule_empty">No workouts scheduled for %1$s</string>
    <string name="toolbar_log_all">Log All</string>
</resources>
