<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/log_workout"
            android:icon="@drawable/weightlifting"
            android:title="@string/log_workout" />

        <item
            android:id="@+id/workout_history"
            android:icon="@drawable/barbell"
            android:title="@string/workout_history" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/settings">
        <item
            android:id="@+id/weight_unit"
            android:title="@string/navigation_drawer_weight_units"
            app:showAsAction="always"
            app:actionLayout="@layout/menu_switch" />
    </group>
</menu>