<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/exercise_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/create_exercise_vertical_margin"
            android:layout_marginTop="@dimen/create_exercise_vertical_margin"
            android:focusable="false"
            android:inputType="textCapWords|textFilter|textNoSuggestions"
            android:hint="@string/exercise_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/muscle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/create_exercise_vertical_margin"
        android:layout_marginTop="@dimen/create_exercise_vertical_margin"
        android:hint="@string/muscle_group"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/add_sets_later"
        android:textAppearance="@style/TextAppearance.DarkerGray.12"/>

</LinearLayout>